NybCParser.java
// Generated from NybC.g4 by ANTLR 4.13.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class NybCParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		IDENT=39, INT=40, FLOAT=41, STRING=42, LINE_COMMENT=43, WS=44;
	public static final int
		RULE_program = 0, RULE_programList = 1, RULE_functionList = 2, RULE_stmtList = 3, 
		RULE_functionStmt = 4, RULE_declareFuncPara = 5, RULE_stmt = 6, RULE_beginStmt = 7, 
		RULE_extendedIf = 8, RULE_switchExpList = 9, RULE_switchExp = 10, RULE_switchCond = 11, 
		RULE_condtion = 12, RULE_declareStmt = 13, RULE_assignStmt = 14, RULE_array = 15, 
		RULE_arrayList = 16, RULE_arrayAccess = 17, RULE_callStmt = 18, RULE_callFuncPara = 19, 
		RULE_ctrlFlowStmt = 20, RULE_expression = 21, RULE_andExpression = 22, 
		RULE_eqExpression = 23, RULE_relExpression = 24, RULE_relOps = 25, RULE_plusExpression = 26, 
		RULE_multExpression = 27, RULE_notExpression = 28, RULE_parrentExpression = 29;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "programList", "functionList", "stmtList", "functionStmt", 
			"declareFuncPara", "stmt", "beginStmt", "extendedIf", "switchExpList", 
			"switchExp", "switchCond", "condtion", "declareStmt", "assignStmt", "array", 
			"arrayList", "arrayAccess", "callStmt", "callFuncPara", "ctrlFlowStmt", 
			"expression", "andExpression", "eqExpression", "relExpression", "relOps", 
			"plusExpression", "multExpression", "notExpression", "parrentExpression"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'begin'", "'function'", "'('", "')'", "'end'", "'var'", 
			"','", "'if'", "'loop'", "'switch'", "'else'", "'else-if'", "'default'", 
			"':'", "'case'", "'='", "'[]'", "'['", "']'", "'continue'", "'break'", 
			"'return'", "'||'", "'&&'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", 
			"'+'", "'-'", "'*'", "'/'", "'!'", "'true'", "'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "IDENT", "INT", "FLOAT", "STRING", "LINE_COMMENT", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "NybC.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public NybCParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ProgramListContext programList() {
			return getRuleContext(ProgramListContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NybCVisitor ) return ((NybCVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			programList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramListContext extends ParserRuleContext {
		public List<FunctionListContext> functionList() {
			return getRuleContexts(FunctionListContext.class);
		}
		public FunctionListContext functionList(int i) {
			return getRuleContext(FunctionListContext.class,i);
		}
		public List<StmtListContext> stmtList() {
			return getRuleContexts(StmtListContext.class);
		}
		public StmtListContext stmtList(int i) {
			return getRuleContext(StmtListContext.class,i);
		}
		public ProgramListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NybCVisitor ) return ((NybCVisitor<? extends T>)visitor).visitProgramList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramListContext programList() throws RecognitionException {
		ProgramListContext _localctx = new ProgramListContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_programList);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(64); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(64);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(62);
					functionList();
					}
					break;
				case 2:
					{
					setState(63);
					stmtList();
					}
					break;
				}
				}
				setState(66); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 549770494084L) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionListContext extends ParserRuleContext {
		public List<FunctionStmtContext> functionStmt() {
			return getRuleContexts(FunctionStmtContext.class);
		}
		public FunctionStmtContext functionStmt(int i) {
			return getRuleContext(FunctionStmtContext.class,i);
		}
		public FunctionListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NybCVisitor ) return ((NybCVisitor<? extends T>)visitor).visitFunctionList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionListContext functionList() throws RecognitionException {
		FunctionListContext _localctx = new FunctionListContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_functionList);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(71); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(68);
					functionStmt();
					setState(69);
					match(T__0);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(73); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtListContext extends ParserRuleContext {
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public StmtListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmtList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NybCVisitor ) return ((NybCVisitor<? extends T>)visitor).visitStmtList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtListContext stmtList() throws RecognitionException {
		StmtListContext _localctx = new StmtListContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_stmtList);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(78); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(75);
					stmt();
					setState(76);
					match(T__0);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(80); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionStmtContext extends ParserRuleContext {
		public List<TerminalNode> IDENT() { return getTokens(NybCParser.IDENT); }
		public TerminalNode IDENT(int i) {
			return getToken(NybCParser.IDENT, i);
		}
		public DeclareFuncParaContext declareFuncPara() {
			return getRuleContext(DeclareFuncParaContext.class,0);
		}
		public StmtListContext stmtList() {
			return getRuleContext(StmtListContext.class,0);
		}
		public FunctionStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NybCVisitor ) return ((NybCVisitor<? extends T>)visitor).visitFunctionStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionStmtContext functionStmt() throws RecognitionException {
		FunctionStmtContext _localctx = new FunctionStmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_functionStmt);
		try {
			setState(104);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(82);
				match(T__1);
				setState(83);
				match(T__2);
				setState(84);
				match(IDENT);
				setState(85);
				match(T__3);
				setState(86);
				declareFuncPara();
				setState(87);
				match(T__4);
				setState(88);
				match(T__0);
				setState(89);
				stmtList();
				setState(90);
				match(T__5);
				setState(91);
				match(T__2);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				match(T__1);
				setState(94);
				match(T__2);
				setState(95);
				match(IDENT);
				setState(96);
				match(T__3);
				setState(97);
				declareFuncPara();
				setState(98);
				match(T__4);
				setState(99);
				match(T__0);
				setState(100);
				stmtList();
				setState(101);
				match(T__5);
				setState(102);
				match(IDENT);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class DeclareFuncParaContext extends ParserRuleContext {
		public TerminalNode IDENT() { return getToken(NybCParser.IDENT, 0); }
		public List<DeclareFuncParaContext> declareFuncPara() {
			return getRuleContexts(DeclareFuncParaContext.class);
		}
		public DeclareFuncParaContext declareFuncPara(int i) {
			return getRuleContext(DeclareFuncParaContext.class,i);
		}
		public DeclareFuncParaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declareFuncPara; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NybCVisitor ) return ((NybCVisitor<? extends T>)visitor).visitDeclareFuncPara(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclareFuncParaContext declareFuncPara() throws RecognitionException {
		DeclareFuncParaContext _localctx = new DeclareFuncParaContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_declareFuncPara);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__6) {
				{
				setState(106);
				match(T__6);
				setState(107);
				match(IDENT);
				setState(112);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(108);
						match(T__7);
						setState(109);
						declareFuncPara();
						}
						} 
					}
					setState(114);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StmtContext extends ParserRuleContext {
		public BeginStmtContext beginStmt() {
			return getRuleContext(BeginStmtContext.class,0);
		}
		public DeclareStmtContext declareStmt() {
			return getRuleContext(DeclareStmtContext.class,0);
		}
		public AssignStmtContext assignStmt() {
			return getRuleContext(AssignStmtContext.class,0);
		}
		public CallStmtContext callStmt() {
			return getRuleContext(CallStmtContext.class,0);
		}
		public CtrlFlowStmtContext ctrlFlowStmt() {
			return getRuleContext(CtrlFlowStmtContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NybCVisitor ) return ((NybCVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_stmt);
		try {
			setState(122);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(117);
				beginStmt();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(118);
				declareStmt();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(119);
				assignStmt();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(120);
				callStmt();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(121);
				ctrlFlowStmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class BeginStmtContext extends ParserRuleContext {
		public CondtionContext condtion() {
			return getRuleContext(CondtionContext.class,0);
		}
		public StmtListContext stmtList() {
			return getRuleContext(StmtListContext.class,0);
		}
		public ExtendedIfContext extendedIf() {
			return getRuleContext(ExtendedIfContext.class,0);
		}
		public DeclareStmtContext declareStmt() {
			return getRuleContext(DeclareStmtContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public AssignStmtContext assignStmt() {
			return getRuleContext(AssignStmtContext.class,0);
		}
		public SwitchCondContext switchCond() {
			return getRuleContext(SwitchCondContext.class,0);
		}
		public SwitchExpListContext switchExpList() {
			return getRuleContext(SwitchExpListContext.class,0);
		}
		public BeginStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_beginStmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NybCVisitor ) return ((NybCVisitor<? extends T>)visitor).visitBeginStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BeginStmtContext beginStmt() throws RecognitionException {
		BeginStmtContext _localctx = new BeginStmtContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_beginStmt);
		try {
			setState(179);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(124);
				match(T__1);
				setState(125);
				match(T__8);
				setState(126);
				condtion();
				setState(127);
				match(T__0);
				setState(128);
				stmtList();
				setState(129);
				match(T__5);
				setState(130);
				match(T__8);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				match(T__1);
				setState(133);
				match(T__8);
				setState(134);
				condtion();
				setState(135);
				match(T__0);
				setState(136);
				stmtList();
				setState(137);
				match(T__5);
				setState(138);
				match(T__8);
				setState(139);
				match(T__0);
				setState(140);
				extendedIf();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(142);
				match(T__1);
				setState(143);
				match(T__9);
				setState(144);
				condtion();
				setState(145);
				match(T__0);
				setState(146);
				stmtList();
				setState(147);
				match(T__5);
				setState(148);
				match(T__9);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(150);
				match(T__1);
				setState(151);
				match(T__9);
				setState(152);
				declareStmt();
				setState(153);
				match(T__0);
				setState(154);
				expression(0);
				setState(155);
				match(T__0);
				setState(156);
				assignStmt();
				setState(157);
				match(T__0);
				setState(158);
				stmtList();
				setState(159);
				match(T__5);
				setState(160);
				match(T__9);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(162);
				match(T__1);
				setState(163);
				match(T__9);
				setState(164);
				match(T__0);
				setState(165);
				stmtList();
				setState(166);
				match(T__0);
				setState(167);
				match(T__5);
				setState(168);
				match(T__9);
				setState(169);
				condtion();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(171);
				match(T__1);
				setState(172);
				match(T__10);
				setState(173);
				switchCond();
				setState(174);
				match(T__0);
				setState(175);
				switchExpList();
				setState(176);
				match(T__5);
				setState(177);
				match(T__10);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExtendedIfContext extends ParserRuleContext {
		public StmtListContext stmtList() {
			return getRuleContext(StmtListContext.class,0);
		}
		public CondtionContext condtion() {
			return getRuleContext(CondtionContext.class,0);
		}
		public ExtendedIfContext extendedIf() {
			return getRuleContext(ExtendedIfContext.class,0);
		}
		public ExtendedIfContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_extendedIf; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NybCVisitor ) return ((NybCVisitor<? extends T>)visitor).visitExtendedIf(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExtendedIfContext extendedIf() throws RecognitionException {
		ExtendedIfContext _localctx = new ExtendedIfContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_extendedIf);
		try {
			setState(206);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(181);
				match(T__1);
				setState(182);
				match(T__11);
				setState(183);
				match(T__0);
				setState(184);
				stmtList();
				setState(185);
				match(T__5);
				setState(186);
				match(T__11);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(188);
				match(T__1);
				setState(189);
				match(T__12);
				setState(190);
				condtion();
				setState(191);
				match(T__0);
				setState(192);
				stmtList();
				setState(193);
				match(T__5);
				setState(194);
				match(T__12);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(196);
				match(T__1);
				setState(197);
				match(T__12);
				setState(198);
				condtion();
				setState(199);
				match(T__0);
				setState(200);
				stmtList();
				setState(201);
				match(T__5);
				setState(202);
				match(T__12);
				setState(203);
				match(T__0);
				setState(204);
				extendedIf();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SwitchExpListContext extends ParserRuleContext {
		public SwitchExpContext switchExp() {
			return getRuleContext(SwitchExpContext.class,0);
		}
		public SwitchExpListContext switchExpList() {
			return getRuleContext(SwitchExpListContext.class,0);
		}
		public StmtListContext stmtList() {
			return getRuleContext(StmtListContext.class,0);
		}
		public SwitchExpListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_switchExpList; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NybCVisitor ) return ((NybCVisitor<? extends T>)visitor).visitSwitchExpList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SwitchExpListContext switchExpList() throws RecognitionException {
		SwitchExpListContext _localctx = new SwitchExpListContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_switchExpList);
		int _la;
		try {
			setState(216);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__15:
				enterOuterAlt(_localctx, 1);
				{
				setState(208);
				switchExp();
				setState(209);
				switchExpList();
				}
				break;
			case T__5:
			case T__13:
				enterOuterAlt(_localctx, 2);
				{
				setState(214);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__13) {
					{
					setState(211);
					match(T__13);
					setState(212);
					match(T__14);
					setState(213);
					stmtList();
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SwitchExpContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public StmtListContext stmtList() {
			return getRuleContext(StmtListContext.class,0);
		}
		public SwitchExpContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_switchExp; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NybCVisitor ) return ((NybCVisitor<? extends T>)visitor).visitSwitchExp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SwitchExpContext switchExp() throws RecognitionException {
		SwitchExpContext _localctx = new SwitchExpContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_switchExp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(218);
			match(T__15);
			setState(219);
			expression(0);
			setState(220);
			match(T__14);
			setState(221);
			stmtList();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class SwitchCondContext extends ParserRuleContext {
		public CondtionContext condtion() {
			return getRuleContext(CondtionContext.class,0);
		}
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public SwitchCondContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_switchCond; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NybCVisitor ) return ((NybCVisitor<? extends T>)visitor).visitSwitchCond(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SwitchCondContext switchCond() throws RecognitionException {
		SwitchCondContext _localctx = new SwitchCondContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_switchCond);
		try {
			setState(225);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(223);
				condtion();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(224);
				expression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class CondtionContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public CallStmtContext callStmt() {
			return getRuleContext(CallStmtContext.class,0);
		}
		public CondtionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_condtion; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof NybCVisitor ) return ((NybCVisitor<? extends T>)visitor).visitCondtion(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CondtionContext condtion() throws RecognitionException {
		CondtionContext _localctx = new CondtionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_condtion);
		try {
			setState(229);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,13,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(227);
				expression(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(228);
				callStmt();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
